# Research-Agent-for-research-and-information-processing-automation

./: .gitignore  README.md  agent_architecture.md  config.yaml  graph.py  main.py  metrics.py  prompts.yaml  pyproject.toml  tools_and_nodes.py
reserch_agent/: config.py  graph.py  llm.py  models.py
reserch_agent/metrics/: evaluators.py
reserch_agent/nodes/: evaluation.py  research.py  synthesis.py
